# BaseApp-Fees-Substreams

./: .gitignore  Cargo.toml  README.md  base_fees.proto  substreams.yaml
src/: lib.rs
